2003-08-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Removed refrences to old template classes.
	Added code to use new template classes and fixed several 
	bugs.
	* Gorm.m: Removed old subclasses for deprecated template classes.
	* GormPrivate.h: Removed subclasses for deprecated template classes.
	* GormLib/IBConnectors.[hm]: added nibInstantiate method.
	
2003-08-16  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.preamble (ADDITIONAL_GUI_LIBS): Add -lGormLib

2003-08-13  Fabien Vallon  <fabien@tuxfamily.org>

	* GormNSPopUpButton.goem : Add Visual help

2003-08-10  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInternalViewEditor.m: Added initilization for variable r so
	that it is not used uninitialized if the first event is not 
	NSLeftMouseUp.

2003-08-10  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocuments.m: -[GormDocument
	pasteType:fromPasteBoard:parent:] Added check to determine if
	frame is responded to by the object being copied.  This was
	failing on NSMenuItem.

2003-08-09  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCustomView.m: Corrected obsolete header reference.
	* GormInspectorsManager.m: Removed extra establishConnection call
	which was causing a problem when removing connections from
	NSOwner.

2003-08-04  Fabien Vallon  <fabien@tuxfamily.org>

	* Add a good when adding Images

2003-08-04  Fabien Vallon  <fabien@tuxfamily.org>

	* GormImageEditor.m : Fix dnd (Todo : accept NSTIFFPboardType)
	(code borrow from Terminal.app by Alexander Malmberg)
	

2003-08-01  Fabien Vallon  <fabien@uxfamily.org>

	* GormDocument.m : Add offset when pasting
	* Gorm.m : clean up & add some comment
	* GormPrivate.h : clean up 

2003-07-31  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.h: Point #include at the new location for
	private headers.
	* GModelDecoder.h: Ditto.

2003-07-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.3.0
